--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,57 @@
 .mb-3 {
-  margin-bottom: 3rem !important;
-}
-
+    margin-bottom: 3rem !important;
+  }
+  
 .mb-2 {
-  margin-bottom: 2rem !important;
+    margin-bottom: 2rem !important;
 }
-
+  
 .mb-1 {
-  margin-bottom: 1rem !important;
-}
-
-table.table-specs td { 
-  padding: 0 0.1rem 0.5rem 0.1rem !important;
-  border: none !important;
+    margin-bottom: 1rem !important;
 }
 
 .featured-image {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .underlay {
-  background-color: rgba(0,0,0,0.4);
-  height: 100%;
-  width: 100%;
+    background-color: rgba(0,0,0,0.4);
+    height: 100%;
+    width: 100%;
 }
 
 .is-sticky {
-  position: fixed;
-  top: 1rem;
+    position: fixed;
+    top: 1rem;
 }
 
 .popular-box > .columns:not(:last-child) {
-  border-bottom: 1px solid hsl(0, 0%, 86%);
+    border-bottom: 1px solid hsl(0, 0%, 86%);
 }
-
 
 .card.is-rounded {
-  border-radius: 4px;
-  overflow: hidden;
+    border-radius: 4px;
+    overflow: hidden;
 }
+  
+/* ==========================
+===== Lazy loading of images 
+=============================*/
+
+.lazy {
+    transition: opacity 1s linear;
+    opacity: 0;
+  }
+  
+  .lazy--placeholder {
+    filter: blur(50px);
+    transform: scale(1);
+    opacity: 1;
+  }
+  
+  .lazy--loaded {
+    opacity: 1;
+  }
+  
