--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,8 @@
 /* ===========
 ===== Gallery
 ==============*/
-
 .gallery {
+  width: 100%;
   position: absolute;
 }
 
@@ -99,8 +99,8 @@
 
 .gallery-image {
   scroll-snap-align: center;
-  min-width: 100%;
   max-height: 100%;
+  min-width: 100%;
   display: flex;
   justify-content: center;
   border-right: 1px solid #000;
@@ -109,31 +109,8 @@
 
 .gallery-image img {
   object-fit: contain;
-}
-
-.gallery-nav {
-  padding: 0.5rem;
-  height: 100%;
-  width: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: background-color 0.1s ease-in;
-}
-
-.gallery-nav:hover {
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.gallery-nav.is-right {
-  position: absolute;
-  right: 0;
-}
-
-.gallery-nav.is-left {
-  position: absolute;
-  left: 0;
+  min-height: 1px;
+  min-width: 1px;
 }
 
 .gallery-foot {
@@ -148,6 +125,26 @@
 .gallery-index {
   display: inline-block;
   width: 60px;
+}
+
+.gallery-nav {
+  padding: 0.5rem;
+  height: 100%;
+  width: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.gallery-nav.is-right {
+  position: absolute;
+  right: 0;
+}
+
+.gallery-nav.is-left {
+  position: absolute;
+  left: 0;
 }
 
 .modal-background {
