--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@
 
 .gallery-body {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
 }
 
 .gallery-images {
@@ -100,18 +100,21 @@
 
 .gallery-image {
   scroll-snap-align: center;
-  max-height: 100%;
+  min-height: 100%;
   min-width: 100%;
+
   display: flex;
   justify-content: center;
+  align-items: center;
+
   border-right: 1px solid #000;
   border-left: 1px solid #000;
 }
 
 .gallery-image img {
   object-fit: contain;
-  min-height: 1px;
-  min-width: 1px;
+  max-height: 100vh;
+  max-width: 100vw;
 }
 
 .gallery-foot {
