--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,13 +99,10 @@
 
 .gallery-image {
   scroll-snap-align: center;
-  min-height: 100%;
+  max-height: 100%;
   min-width: 100%;
-
   display: flex;
   justify-content: center;
-  align-items: center;
-
   border-right: 1px solid #000;
   border-left: 1px solid #000;
 }
